# evo_sim

./: .gitignore  Cargo.toml  README.md  brain.py  models.proto
old/: brain.rs  constants.rs  creature.rs  draw.rs  game.rs  genes.rs  io.rs  main.rs
old/physics/: geom.rs  mod.rs  phy.rs
pytest/: blocks.py  gen_coords.py  models_pb2.py  proto_to_json.py  rand_convex_hull.py  render.py  renderer.py
renderer/: main.py  models_pb2.py  package-lock.json  package.json
renderer/client/: package-lock.json  package.json
renderer/client/src/: App.js  index.js
renderer/public/: index.html
renderer/server/: Pipfile  README.md
renderer/server/old/: bundle.json  hello.data  package-lock.json  package.json
renderer/server/src/: constants.py  main.py  models_pb2.py
renderer/src/: config.js
renderer/src/components/: Simulation.js  Toolbar.js
renderer/src/models/: activation.js  block.js  bounds.js  brain.js  constants.js  creature.js  creaturestate.js  cycle.js  neuron.js  point.js  step.js  traits.js  wall.js
renderer/src/services/: cycle.js
renderer/src/sim/: mesh.js
renderer/src/styles/: container.css  index.css  toolbar.css
src/: brain.rs  constants.rs  creature.rs  draw.rs  game.rs  genes.rs  interface.rs  io.rs  main.rs  models.proto  models.rs
src/engine/: create.rs  cycle.rs  initialize.rs  mod.rs  render.rs
src/http/: server.rs
src/http/routes/: create_cycles.rs  get_cycle.rs  (+6 more)
src/physics/: geom.rs  math.rs  mod.rs  vec.rs
src/state/: bounds.rs  brain.rs  create.rs  creature.rs  mod.rs  models.rs  simulation.rs  simulator.rs  traits.rs
(+16 files in other folders)
