[package]
name = "evo_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
rapier2d = { version = "0.11.1", features = [ "simd-stable", "parallel" ] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tiny_http = "0.9.0"
prost = "0.9.0"
prost-build = "0.9.0"
rand = "0.7.3"
env_logger = "0.9.0"
log = "0.4.14"

[profile.dev.package.rapier2d]
opt-level = 3

[profile.release]
codegen-units = 1