[package]
name = "evo_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
rapier2d = { version = "0.11.1", features = [ "simd-stable", "parallel" ] }
serde = { version = "1.0.133", features = ["derive"] }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
serde_json = "1.0.74"
tiny_http = "0.9.0"
prost = "0.9.0"
prost-build = "0.9.0"
rand = "0.7.3"
env_logger = "0.9.0"
log = "0.4.14"
lazy_static = "1.4.0"
bytes = "1.1.0"
regex = "1.5.5"
json = "0.12.4"
piston = "0.53.0"
piston2d-graphics = "0.41.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.79.0"

[profile.dev.package.rapier2d]
opt-level = 3

[profile.release]
codegen-units = 1